♻️ refactor: voicefile-alarm 모듈 의존성 분리 #58