@@ -7,12 +7,14 @@ import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import lombok.RequiredArgsConstructor;
 import naeilmolae.domain.alarm.domain.Alarm;
+import naeilmolae.domain.alarm.domain.AlarmCategory;
+import naeilmolae.domain.alarm.domain.AlarmCategoryMessage;
 import naeilmolae.domain.alarm.domain.CategoryType;
 import naeilmolae.domain.alarm.dto.AlarmCategoryCount;
+import naeilmolae.domain.alarm.dto.response.AlarmCategoryMessageResponseDto;
 import naeilmolae.domain.alarm.dto.response.AlarmCategoryResponseDto;
 import naeilmolae.domain.alarm.dto.response.AlarmCategoryResponseDtoWithChildren;
-import naeilmolae.domain.alarm.dto.response.AlarmResponseDto;
-import naeilmolae.domain.alarm.service.AlarmCategoryService;
+import naeilmolae.domain.alarm.service.AlarmCategoryMessageService;
 import naeilmolae.domain.alarm.service.AlarmService;
 import naeilmolae.domain.alarm.service.AlarmViewService;
 import naeilmolae.domain.member.domain.Member;
@@ -24,35 +26,45 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
+
+import static naeilmolae.domain.alarm.domain.AlarmCategory.ROOT_CATEGORIES;
 
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/api/v1/alarm")
 public class AlarmController {
     private final AlarmViewService alarmViewService;
-    private final AlarmCategoryService alarmCategoryService;
     private final AlarmService alarmService;
+    private final AlarmCategoryMessageService alarmCategoryMessageService;
 
     // valid
     @Operation(summary = "[VALID] [청년] 위로 청취 1단계: 위로 목록 조회", description = "위로 목록을 조회합니다. 이후 '[청년] 청취 1단계'로 이동합니다. ")
     @GetMapping("/alarm-category/comfort")
     public BaseResponse<List<AlarmCategoryResponseDtoWithChildren>> getComfortList(@CurrentMember Member member) {
-        List<AlarmCategoryResponseDtoWithChildren> collect = alarmCategoryService.findComfortAlarmCategoryList()
+        List<AlarmCategory> list = ROOT_CATEGORIES
                 .stream()
-                .map(AlarmCategoryResponseDtoWithChildren::new)
+                .filter(item -> item.getCategoryType().equals(CategoryType.COMFORT))
                 .collect(Collectors.toList());
+
+        List<AlarmCategoryResponseDtoWithChildren> collect = alarmCategoryMessageService.findByAlarmCategoryIn(list)
+                .stream()
+                .map(alarmCategoryMessage -> new AlarmCategoryResponseDtoWithChildren(alarmCategoryMessage.getAlarmCategory(), alarmCategoryMessage))
+                .collect(Collectors.toList());
+
         return BaseResponse.onSuccess(collect);
     }
 
     // valid
     @Operation(summary = "[VALID] [청년] 위로 청취 2단계: 1단계로 AlarmId 조회", description = "위로 목록을 조회합니다. 이후 '[청년] 청취 1단계'로 이동합니다. ")
-    @GetMapping("/alarm-category/{alarmCategoryId}")
-    public BaseResponse<AlarmResponseDto> getAlarmIdByAlarmCategoryId(@CurrentMember Member member,
-                                                                      @PathVariable Long alarmCategoryId) {
-        Alarm alarm = alarmService.findByAlarmCategoryId(alarmCategoryId);
-        AlarmResponseDto alarmResponseDto = new AlarmResponseDto(alarm.getId(), alarm.getAlarmCategory().getTitle());
-        return BaseResponse.onSuccess(alarmResponseDto);
+    @GetMapping("/alarm-category/{alarmCategory}")
+    public BaseResponse<AlarmCategoryMessageResponseDto> getAlarmIdByAlarmCategoryId(@CurrentMember Member member,
+                                                                                     @PathVariable AlarmCategory alarmCategory) {
+        Alarm alarm = alarmService.findByAlarmCategory(alarmCategory);
+        AlarmCategoryMessage alarmCategoryMessage = alarmCategoryMessageService.findByAlarmCategory(alarmCategory);
+        AlarmCategoryMessageResponseDto alarmCategoryMessageResponseDto = new AlarmCategoryMessageResponseDto(alarm, alarmCategoryMessage);
+        return BaseResponse.onSuccess(alarmCategoryMessageResponseDto);
     }
 
     @Operation(summary = "[VALID] [봉사자] 녹음 1단계: 녹음 선택 리스트 조회", description = "사용자의 녹음할 리스트를 조회합니다. 정렬은 1. 사용자가 작성하지 않음 2. 데이터 수가 적음 순으로 보여지게 됩니다. ")
@@ -70,14 +82,13 @@ public class AlarmController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "COMMON200", description = "조회 성공"),
     })
-    @GetMapping("/alarm-category/{alarmCategoryId}/optimized")
-    public BaseResponse<AlarmResponseDto> getAlarmCategory(@CurrentMember Member member,
-                                                           @PathVariable Long alarmCategoryId) {
-        Alarm recommendedAlarm = alarmViewService.findRecommendedAlarm(member.getId(), alarmCategoryId);
-        String title = recommendedAlarm.getAlarmCategory().getTitle();
-        Long id = recommendedAlarm.getId();
-        AlarmResponseDto alarmResponseDto = new AlarmResponseDto(id, title);
-        return BaseResponse.onSuccess(alarmResponseDto);
+    @GetMapping("/alarm-category/{alarmCategory}/optimized")
+    public BaseResponse<AlarmCategoryMessageResponseDto> getAlarmCategory(@CurrentMember Member member,
+                                                                          @PathVariable AlarmCategory alarmCategory) {
+        Alarm recommendedAlarm = alarmViewService.findRecommendedAlarm(member.getId(), alarmCategory);
+        AlarmCategoryMessage alarmCategoryMessage = alarmCategoryMessageService.findByAlarmCategory(alarmCategory);
+        AlarmCategoryMessageResponseDto alarmCategoryMessageResponseDto = new AlarmCategoryMessageResponseDto(recommendedAlarm, alarmCategoryMessage);
+        return BaseResponse.onSuccess(alarmCategoryMessageResponseDto);
     }
 
     @Operation(summary = "[VALID] [봉사자] 동기부여 1단계: 북두칠성 조회 API", description = "사용자의 북두칠성을 조회합니다.")
@@ -88,20 +99,23 @@ public class AlarmController {
     })
     @GetMapping("/this-week")
     public BaseResponse<List<AlarmCategoryResponseDto>> getDistinctAlarmTypesThisWeek(@CurrentMember Member member) {
-        List<AlarmCategoryResponseDto> collect = alarmViewService.findDistinctCreatedCategories(member.getId())
+
+        Set<AlarmCategory> distinctCreatedCategories = alarmViewService.findDistinctCreatedCategories(member.getId());
+        List<AlarmCategoryResponseDto> collect = alarmCategoryMessageService.findByAlarmCategoryIn(distinctCreatedCategories.stream().toList())
                 .stream()
-                .map(AlarmCategoryResponseDto::new)
+                .map(alarmCategoryMessage -> new AlarmCategoryResponseDto(alarmCategoryMessage.getAlarmCategory(), alarmCategoryMessage))
                 .collect(Collectors.toList());
         return BaseResponse.onSuccess(collect);
     }
 
+    // TDOO 위 아래 중복 로직임
     @Operation(summary = "[VALID] [봉사자] 동기부여 4단계: 카테고리 목록 조회", description = "위로 목록을 조회합니다. 이후 '[청년] 청취 1단계'로 이동합니다. ")
     @GetMapping("/alarm-category/")
     public BaseResponse<List<AlarmCategoryResponseDto>> getAlarmCategoryList(@CurrentMember Member member) {
-        List<AlarmCategoryResponseDto> list = alarmService.findParentCateories()
+        List<AlarmCategoryResponseDto> list = alarmCategoryMessageService.findByAlarmCategoryIn(ROOT_CATEGORIES)
                 .stream()
-                .map(AlarmCategoryResponseDto::new).toList();
-
+                .map(alarmCategoryMessage -> new AlarmCategoryResponseDto(alarmCategoryMessage.getAlarmCategory(), alarmCategoryMessage))
+                .collect(Collectors.toList());
         return BaseResponse.onSuccess(list);
     }
 }
